recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:4: error: unclosed character literal
var rep = 'l(0)'::'l(l.length-2)'
                                ^butLast:4: error: ';' expected but symbol literal found.
var rep = 'l(0)'::'l(l.length-2)'
               ^